--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,9 +1,11 @@
-<h2>Новый вопрос</h2>
+<h2> Редактирование вопроса <%= @question.user_id%></h2>
 
 <%= form_with model: @question do |form|%>
 <p><%= form.label :body, 'Текст вопроса' %></p>
 <p><%= form.text_area :body, rows: 5%></p>
 <p><%= form.label :user_id %></p>
 <p><%= form.text_field :user_id %></p>
-<p><%= form.submit "Создать" %></p>
+<p><%= form.submit "Сохранить" %></p>
   <%end%>
+
+<p><%= link_to "Отменить", question_path(@question) %></p>
