--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -3,4 +3,11 @@
 <p><%= @question.body %></p>
 <p> user_id: <b><%= @question.user_id %></b></p>
 
+<p><%= link_to "Изменить вопрос", edit_question_path(@question) %></p>
+
+<%# кнопки в <p> заворачивать нельзя, делаем div %>
+<div>
+  <%= button_to "Удалить вопрос", question_path(@question), method: :delete %>
+</div>
+
 <p><%= link_to "Все вопросы", questions_path %></p>
