--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,9 +1,17 @@
-<h2>Новый вопрос</h2>
+<div class="container">
 
-<%= form_with model: @question do |form|%>
-<p><%= form.label :body, 'Текст вопроса' %></p>
-<p><%= form.text_area :body, rows: 5%></p>
-<p><%= form.label :user_id %></p>
-<p><%= form.text_field :user_id %></p>
-<p><%= form.submit "Создать" %></p>
+  <h2 class="title-lg  mb">Новый вопрос</h2>
+
+  <%= form_with model: @question do |form|%>
+    <p><%= form.label :body, 'Текст вопроса' %></p>
+    <p><%= form.text_area :body, rows: 5, class: 'form-text-area'%></p>
+    
+    <p class="mt"><%= form.label :user_id %></p>
+    <p><%= form.text_field :user_id, class: 'form-text-field' %></p>
+    
+    <p class="mt"><%= form.submit "Создать", class:'button button-main' %></p>
   <%end%>
+
+  <p class="mt"><%= link_to "Отменить", questions_path, class:'button button-main' %></p>
+
+</div>
