--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -2,14 +2,8 @@
 
   <h2 class="title-lg mb"> Редактирование вопроса <%= @question.user_id%></h2>
 
-  <%= form_with model: @question do |form|%>
-    <p><%= form.label :body, 'Текст вопроса' %></p>
-    <p><%= form.text_area :body, rows: 5, class: 'form-text-area' %></p>
-    <p><%= form.label :user_id %></p>
-    <p><%= form.text_field :user_id, class: 'form-text-field'%></p>
-    <p><%= form.submit "Сохранить", class: 'button button-main' %></p>
-  <%end%>
-
+  <%= render 'form', question: @question %>
+  
   <p class="mt">
     <%= link_to "Отменить", question_path(@question), class: 'button button-main' %>
   </p>
