--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,15 +2,10 @@
 
   <h1> Шаблон show.html.erb  </h1>
   <h1 class="title-lg mb"> Вопрос </h1>
-  <p class="mt-sm"><%= @question.body %></p>
-  <p> user_id: <b><%= @question.user_id %></b></p>
 
-  <p class="mt"><%= link_to "Изменить вопрос", edit_question_path(@question), class:'button button-main' %></p>
-
-  <%# кнопки в <p> заворачивать нельзя, делаем div %>
-  <p class="mt">
-    <%= button_to "Удалить вопрос", question_path(@question), method: :delete, class:'button button-main' %>
-  </p>
+  <%= render 'question', question: @question %> 
+  <%# можно заменить на сокращенный вызов%>
+  <%#= render @question %> 
 
   <p class="mt"><%= link_to "Все вопросы", questions_path %></p>
 
