--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
         <div>
           <% if current_user.present? %>
             <%= content_tag :span, "@#{current_user.nickname}", class: 'mr-sm' %>
-            <%= button_to 'выйти', session_path, method: :delete %>
+            <%= button_to 'Выйти', session_path, method: :delete %>
+            <%= button_to 'Профиль', edit_user_path(current_user), method: :get %>
+
           <%else %>
             <%= link_to 'Регистрация', new_user_path, class: 'button button-yellow mr-sm'%>
             <%= link_to 'Вход', new_session_path, class: 'button button-yellow' %>
